--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                    background-color: #5762ef;
                    color: white;
                  }
+                 .login {
+                   background-color: #5762ef;
+                 }
                  </style>
                  </head>
                  <img src="top.png">
@@ -45,7 +48,7 @@
     <div class="flex flex-col   p-2   gap-1">
     <input type="password" name="description" placeholder="Password" id="password" autocomplete="new-password" aria-autocomplete="list" required="password"></div>
     <div>
-    <button type="submit" style="width: 80%">Log In</button>
+    <button type="submit" class="login" style="width: 80%">Log In</button>
     </div>
     </div>
     </form>
