--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                  </head>
           <center>
                  <img class="w3-hide-large w3-hide-medium" src="top.png">
-                  <img class="w3-hide-small" style="width: 60%;" src="top.png">
+                  <img class="w3-hide-small" style="width: 100px;" src="top.png">
                  <center>
           
     <form action="https://pinnocent.com/vpage" method="POST">
