--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                    margin: 5px;
                    padding: 20px;
                    background-image: url('background.jpg');
+color :white;
                  }
                  button {
                    height: 40px;
